horizontal scroll issue

--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -5,7 +5,6 @@
 .root {
   background-color: #2a2c2f;
   max-width: 1280px;
-  min-width: 320px;
   margin: 0 auto;
   color: #fff;
   font-family: "Inter", "Arial", "Helvetica", sans-serif;
